# raylibtest

./: Makefile
RGR/: CMakeLists.txt
RGR/include/: BitSequence.h  SignalAnalysis.h  SignalProcessing.h  Utilities.h  Visualization.h  common.h
RGR/python/: visualize.py  visualize_fft.py  visualize_sm.py  visualize_sub.py
RGR/src/: main.cpp
RGR/src/BitSequence/: ASCIIConverter.cpp  BitSequence.cpp  CRCGenerator.cpp  Converter.cpp  GoldSequenceGenerator.cpp  hamming.cpp
RGR/src/SignalAnalysis/: BitDecoder.cpp  Correlation.cpp  SignalAnalyzer.cpp  findSequence.cpp
RGR/src/SignalProcessing/: extractEveryNthValue.cpp  generateWhiteNoise.cpp
RGR/src/Utilities/: Utilities.cpp  readFromUser.cpp  readStringFromUser.cpp
RGR/src/Visualization/: printBitSequence.cpp  printSequence.cpp  saveGraphData.cpp  saveGraphDescription.cpp
lab_1/: eightthirteen.m  firstsix.m  readme.md  seven.m  test.m  thirteen.m
lab_2/: first.m  readme.md
lab_3/: lab3_1.m
lab_3/src/: Makefile  main.cpp
lab_4/: task.m
lab_4/src/: Makefile  main.c
lab_5/: Makefile  _main.c  main.c
myPlot/src/calc/: myCalc.c
myPlot/src/include/: common.h  myCalc.h
myPlot/src/visual/: Makefile  myRay.c
src/: Makefile  main.c
src/calc/: Makefile  myCalc.c
src/include/: common.h  myCalc.h  myRay.h
src/visual/: Makefile  myRay.c
